[build-system]
requires = ["setuptools>=61.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hardness"
version = "0.3.0"  
description = "Python Indentation Toolbox"
authors = [
    { name = "Ludovic Charleux", email = "ludovic.charleux@univ-smb.fr" },
    { name = "Emile Roux" }
]
license = { text = "GPL v3" }
readme = "README.md"
requires-python = ">=3.6"
# homepage = "https://github.com/lcharleux/hardness"

# [project.urls]
# Repository = "https://github.com/lcharleux/hardness"

# Dependencies must be in a TOML array
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "numba",
    "meshio",
    "gmsh",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hardness"]

[tool.setuptools]
include-package-data = true
zip-safe = false
